photoprism-minnen/mariadb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: photoprism-minnen
spec:
  serviceName: mariadb
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: database
          securityContext:
            runAsUser: 1004
            runAsGroup: 100
      volumes:
        - name: database
          nfs:
            path: /export/Kubernetes/photoprism-minnen/database
            server: 192.168.86.107
