photoprism-minnen/photoprism-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
  namespace: photoprism-minnen
spec:
  selector:
    matchLabels:
      app: photoprism
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
        - name: photoprism
          image: photoprism/photoprism:latest
          ports:
            - containerPort: 2342
              name: http
          volumeMounts:
            - mountPath: /photoprism/originals
              name: originals
            - mountPath: /photoprism/storage
              name: storage
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: http
      volumes:
        - name: originals
          nfs:
            path: /export/Minnen
            server: 192.168.86.107
        - name: storage
          nfs:
            path: /export/Kubernetes/photoprism-minnen/storage
            server: 192.168.86.107
