photoprism-minnen/photoprism-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
  namespace: photoprism-minnen
  labels:
    app.kubernetes.io/name: photoprism
    app.kubernetes.io/instance: minnen
    app.kubernetes.io/component: photo-manager
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: photoprism
      app.kubernetes.io/instance: minnen
      app.kubernetes.io/component: photo-manager
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: photoprism
        app.kubernetes.io/instance: minnen
        app.kubernetes.io/component: photo-manager
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: photoprism
          image: photoprism/photoprism:latest
          ports:
            - containerPort: 2342
              name: http
          volumeMounts:
            - mountPath: /photoprism/originals
              name: originals
            - mountPath: /photoprism/storage
              name: storage
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: http
      volumes:
        - name: originals
          nfs:
            path: /export/Minnen
            server: 192.168.86.107
        - name: storage
          nfs:
            path: /export/Kubernetes/photoprism-minnen/storage
            server: 192.168.86.107
