photoprism-minnen/photoprism-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: photoprism-minnen
  labels:
    app.kubernetes.io/name: photoprism
    app.kubernetes.io/instance: minnen
    app.kubernetes.io/component: photo-manager
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app.kubernetes.io/name: photoprism
    app.kubernetes.io/instance: minnen
    app.kubernetes.io/component: photo-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2342
