photoprism-minnen/photoprism-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: photoprism
  namespace: photoprism-minnen
  labels:
    app.kubernetes.io/name: photoprism
    app.kubernetes.io/instance: minnen
    app.kubernetes.io/component: ingress
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minnen.albinmedoc.se`)
      kind: Rule
      services:
        - name: photoprism
          port: 80
      middlewares:
        - name: authentik
          namespace: authentik
